# fastapi-auth

./: .gitignore  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.cfg
fastapi_auth/: auth_app.py  auth_settings.py  dependencies.py
fastapi_auth/fastapi_util/: api_model.py
fastapi_auth/fastapi_util/orm/: base.py  columns.py  guid_type.py
fastapi_auth/fastapi_util/settings/: api_settings.py  base_api_settings.py  database_settings.py
fastapi_auth/fastapi_util/setup/: initialize.py  setup_api.py  setup_database.py
fastapi_auth/fastapi_util/util/: enums.py  session.py  timing.py
fastapi_auth/models/: auth.py  user.py
fastapi_auth/orm/: refresh_token.py  user.py
fastapi_auth/security/: json_web_token.py  password.py  signing.py
fastapi_auth/util/: cache.py  errors.py
scripts/: check-requirements.sh
tests/: test_settings.py
tests/test_auth_app/: build_app.py  conftest.py  test_include_admin_routes.py  test_schema.py  test_session_middleware.py  test_setup.py  test_warnings.py
tests/test_auth_app/schemas/: admin.json  non_admin.json
tests/test_auth_app/test_endpoints/: shared.py  test_debug.py  test_prod.py
tests/test_fastapi_utils/: test_columns.py  test_tasks.py  test_timing.py
tests/test_fastapi_utils/test_features/: test_cbv.py  test_inferring_router.py
tests/test_fastapi_utils/test_settings/: test_api_settings.py
tests/test_security/: test_jwt.py  test_password.py
tests/test_util/: test_errors.py
tests/util/: custom_user.py  test_api_base.py  test_base.py
(+2 files in other folders)
